--- a/AnimationsJazz/Base.lproj/Main.storyboard
+++ b/AnimationsJazz/Base.lproj/Main.storyboard
@@ -1,14 +1,16 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--LoginVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginVC" customModule="AnimationsJazz" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +18,80 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hMq-Tm-dkr">
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="brain" translatesAutoresizingMaskIntoConstraints="NO" id="J9D-Rr-X5v"/>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="J9D-Rr-X5v" secondAttribute="bottom" id="Jjw-Lu-7uU"/>
+                                    <constraint firstAttribute="trailing" secondItem="J9D-Rr-X5v" secondAttribute="trailing" id="Wr7-Kz-Srf"/>
+                                    <constraint firstItem="J9D-Rr-X5v" firstAttribute="top" secondItem="hMq-Tm-dkr" secondAttribute="top" id="mkA-pq-dX9"/>
+                                    <constraint firstItem="J9D-Rr-X5v" firstAttribute="leading" secondItem="hMq-Tm-dkr" secondAttribute="leading" id="u0S-mS-S5O"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7QO-rC-mIh">
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="pWl-c2-SG7">
+                                        <subviews>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Hg-ul-TZN">
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HXt-zI-gKk">
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="09j-AP-HQJ">
+                                                <state key="normal" title="Login"/>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="HXt-zI-gKk" firstAttribute="width" secondItem="6Hg-ul-TZN" secondAttribute="width" id="Mif-As-3cv"/>
+                                            <constraint firstItem="09j-AP-HQJ" firstAttribute="width" secondItem="HXt-zI-gKk" secondAttribute="width" id="mf2-qX-jR9"/>
+                                        </constraints>
+                                    </stackView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m9r-zB-guX">
+                                        <color key="backgroundColor" red="0.95686274510000002" green="0.31764705879999999" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="4SV-nd-i4d"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="6Hg-ul-TZN" firstAttribute="width" secondItem="7QO-rC-mIh" secondAttribute="width" multiplier="1:2" id="1nl-Dk-hsz"/>
+                                    <constraint firstItem="pWl-c2-SG7" firstAttribute="centerX" secondItem="7QO-rC-mIh" secondAttribute="centerX" id="1y9-jU-Rjp"/>
+                                    <constraint firstItem="m9r-zB-guX" firstAttribute="leading" secondItem="7QO-rC-mIh" secondAttribute="leading" id="4OY-9O-xEU"/>
+                                    <constraint firstItem="pWl-c2-SG7" firstAttribute="centerY" secondItem="7QO-rC-mIh" secondAttribute="centerY" id="5oi-HA-t3B"/>
+                                    <constraint firstItem="m9r-zB-guX" firstAttribute="top" secondItem="7QO-rC-mIh" secondAttribute="top" id="Fat-g5-5Z0"/>
+                                    <constraint firstAttribute="trailing" secondItem="m9r-zB-guX" secondAttribute="trailing" id="JYa-k3-pxk"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="7QO-rC-mIh" firstAttribute="height" secondItem="hMq-Tm-dkr" secondAttribute="height" id="6gd-jg-rnu"/>
+                            <constraint firstAttribute="trailing" secondItem="hMq-Tm-dkr" secondAttribute="trailing" id="8cR-Vh-oD7"/>
+                            <constraint firstAttribute="trailing" secondItem="7QO-rC-mIh" secondAttribute="trailing" id="AWF-zL-c5s"/>
+                            <constraint firstItem="hMq-Tm-dkr" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="KLB-pe-tLd"/>
+                            <constraint firstItem="7QO-rC-mIh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Vge-Pg-3HK"/>
+                            <constraint firstItem="hMq-Tm-dkr" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="eCP-d9-Tzx"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7QO-rC-mIh" secondAttribute="bottom" id="ok7-Fp-j5S"/>
+                            <constraint firstItem="7QO-rC-mIh" firstAttribute="width" secondItem="hMq-Tm-dkr" secondAttribute="width" id="tkl-lc-wah"/>
+                            <constraint firstItem="7QO-rC-mIh" firstAttribute="top" secondItem="hMq-Tm-dkr" secondAttribute="bottom" constant="8" id="w5U-fI-pRt"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140" y="125.4872563718141"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="brain" width="1667" height="1667"/>
+    </resources>
 </document>
